--- a/package.json
+++ b/package.json
@@ -1,1 +1,18 @@
+{
+  "name": "xmicrolend",
+  "version": "0.1.0",
+  "description": "XRPL Micro-lending MVP (DID + Issued Currency + Escrow) - Testnet",
+  "type": "module",
+  "scripts": {
+    "start": "node server.js",
+    "demo": "node tests/demo-flow.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "dotenv": "^16.0.3",
+    "xrpl": "^4.4.1",
+    "body-parser": "^1.20.2",
+    "node-fetch": "^3.4.1"
+  }
+}
 
